# longest-word

./: main.py  pyproject.toml
src/longest_word/: game.py
tests/: test_game.py
